--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>akhn abr try krtaci git e bash daoaer jnno..</h1>
     <p>jibon onk sundor.</p>
     <h3>Look mama! I push to github</h3>
+    <h3>its not mama . your hubby.</h3>
+    <p>feeling happy now</p>
+    <p>I am a ghost.</p>
 </body>
 </html>
