--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <h3>its not mama . your hubby.</h3>
     <p>feeling happy now</p>
     <p>I am a ghost.</p>
+    <input type="text">
+    <br>
+    <button>click me baby!</button>
 </body>
 </html>
